# epilepsy2bids

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/epilepsy2bids/: annotations.py  eeg.py
src/epilepsy2bids/bids/: convert2bids.py  events.json
src/epilepsy2bids/bids/chbmit/: convert2bids.py  dataset_description.json  participants.json
src/epilepsy2bids/bids/seizeit/: README.md  convert2bids.py  dataset_description.json  eeg.json
src/epilepsy2bids/bids/severity/: convert2bids.py  dataset_description.json  eeg.json  participants.json  trc.py
src/epilepsy2bids/bids/siena/: README.md  convert2bids.py  dataset_description.json  eeg.json
src/epilepsy2bids/bids/tuh/: README.md  convert2bids.py  dataset_description.json  eeg.json  participants.json
src/epilepsy2bids/download/: download_seizeit.py
src/epilepsy2bids/load_annotations/: chbmit.py  seizeit.py  seizeitAnnotationConverter.py  severity.py  siena.py  sienaAnnotationConverter.py  tuh.py
test/: testEeg.py
tests/: makeDataset.py  makeSampleEdf.py  sample.tsv  testAnnotations.py  testBids.py  testEeg.py  test_annotations.py  test_bids.py  test_eeg.py
tests/data/chbmit/chb05/: chb05_01.edf  chb05_02.edf  chb05_03.edf  chb05_04.edf  chb05_05.edf  chb05_06.edf  chb05_07.edf  chb05_08.edf  chb05_09.edf  chb05_10.edf  chb05_11.edf  chb05_12.edf  chb05_13.edf  chb05_14.edf  chb05_15.edf  chb05_16.edf  chb05_17.edf  chb05_18.edf  chb05_19.edf  chb05_20.edf  chb05_21.edf  chb05_22.edf  chb05_23.edf  chb05_24.edf  chb05_25.edf  chb05_26.edf  chb05_27.edf  chb05_28.edf  chb05_29.edf  chb05_30.edf  chb05_31.edf  chb05_32.edf  chb05_33.edf  chb05_34.edf  chb05_35.edf  chb05_36.edf  chb05_37.edf  chb05_38.edf  chb05_39.edf
tests/data/chbmit/chb08/: chb08_02.edf  chb08_03.edf  chb08_04.edf  chb08_05.edf  chb08_10.edf  chb08_11.edf  chb08_12.edf  chb08_13.edf  chb08_14.edf  chb08_15.edf  chb08_16.edf  chb08_17.edf  chb08_18.edf  chb08_19.edf  chb08_20.edf  (+5 more)
tests/data/siena/: subject_info.csv
(+491 files in other folders)
