[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epilepsy2bids"
version = "0.0.1"
authors = [
  { name="Jonathan Dan", email="jonathan.dan@epfl.ch" },
  { name="PEDESITE" }
]
description = "Python library for converting EEG datasets of people with epilepsy to BIDS compatible datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nptyping>=2.5.0",
  "numpy>=1.24.3",
  "pandas>=2.1.3",
  "pyarrow>=16.1.0",
  "pyedflib>=0.1.36",
  "resampy>=0.4.2",
  "termcolor>=2.4.0"
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/esl-epfl/epilepsy2bids"
"Bug Tracker" = "https://github.com/esl-epfl/epilepsy2bids/issues"