[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.dev-dependencies]
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/epilepsy2bids"]

[project]
name = "epilepsy2bids"
version = "0.0.2"
authors = [
  { name="Jonathan Dan", email="jonathan.dan@epfl.ch" },
  { name="PEDESITE" }
]
description = "Python library for converting EEG datasets of people with epilepsy to BIDS compatible datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nptyping>=2.5.0",
  "numpy>=1.24.3",
  "pandas>=2.1.3",
  "pyarrow>=16.1.0",
  "pyedflib>=0.1.36",
  "resampy>=0.4.2",
  "termcolor>=2.4.0"
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/esl-epfl/epilepsy2bids"
"Bug Tracker" = "https://github.com/esl-epfl/epilepsy2bids/issues"